Revision history for OpenTelemetry

{{$NEXT}}

0.027     2024-12-20 17:31:04+00:00 Europe/London

    * Fixed some minor nits in the documentation
    * Add 'isa' as a dependency and reduce the minimum supported Perl
      version to 5.30. If you are running 5.30 please consider installing
      Type::Tiny::XS which should improve the performance of these 'isa'
      checks.

0.026     2024-12-16 09:02:42+00:00 Europe/London

    * Added some practical documentation in the OpenTelemetry::Guides
      namespace, based on the language documentation by the OpenTelemtry
      authors. Examples used in those documents has also been added to
      the examples directory in this distribution. In the future, this
      namespace will expand to include more guides.
    * Renamed OpenTelemetry::Integration namespace to
      OpenTelemetry::Instrumentation to be consistent with the names in
      the specification. The legacy namespace will continue to be
      supported for now, but new implementations should not use it.

0.025     2024-10-20 13:50:19+01:00 Europe/London

    * Fixed an issue in the integrations for HTTP::Tiny and
      LWP::UserAgent which meant that if the spans created
      internally were root spans, their data would not propagate
      correctly

0.024     2024-10-11 18:36:41+01:00 Europe/London

    * Expand test coverage and documentation for logging code

0.023001  2024-09-28 14:48:24+01:00 Europe/London (TRIAL RELEASE)

    * Updated the documentation to remove remaining mentions of the
      span's 'add_link' method, which was removed to comply with the
      specification
    * Add experimental support for logs

0.023     2024-06-03 10:31:57+01:00 Europe/London

    * Fixed an issue with experimental cleanup where "DBI::db::execute"
      was replaced with "DBI::db::do" by mistake (GH #17)
    * Fixed an issue with the versioning of the OpenTelemetry::Baggage
      module, which has been reporting the same version number since