@@ -2,6 +2,9 @@ Revision history for OpenTelemetry
 
 {{$NEXT}}
 
+    * Removed arguments from OpenTelemetry::Context constructors, since
+      these could bypass the key validation.
+
 0.027     2024-12-20 17:31:04+00:00 Europe/London
 
     * Fixed some minor nits in the documentation
